app/css/index.css
/* ... */
.absolute {
	position: absolute;
}

.relative {
	position: relative;
}

.sticky {
	position: sticky;
}

.inset-0 {
	inset: 0px;
}

.bottom-2 {
	bottom: 0.5rem;
}

.bottom-4 {
	bottom: 1rem;
}

.left-4 {
	left: 1rem;
}

.right-2 {
	right: 0.5rem;
}

.top-0 {
	top: 0px;
}

.top-2 {
	top: 0.5rem;
}

.z-10 {
	z-index: 10;
}

.z-50 {
	z-index: 50;
}

.col-span-2 {
	grid-column: span 2 / span 2;
}

.col-span-full {
	grid-column: 1 / -1;
}

.row-span-2 {
	grid-row: span 2 / span 2;
}

.row-start-2 {
	grid-row-start: 2;
}

.clear-none {
	clear: none;
}

.mx-2 {
	margin-left: 0.5rem;
	margin-right: 0.5rem;
}

.mx-auto {
	margin-left: auto;
	margin-right: auto;
}

.my-4 {
	margin-top: 1rem;
	margin-bottom: 1rem;
}

.my-\[10\%\] {
	margin-top: 10%;
	margin-bottom: 10%;
}

.mb-1 {
	margin-bottom: 0.25rem;
}

.mb-2 {
	margin-bottom: 0.5rem;
}

.mb-3 {
	margin-bottom: 0.75rem;
}

.mb-4 {
	margin-bottom: 1rem;
}

.mb-8 {
	margin-bottom: 2rem;
}

.mt-2 {
	margin-top: 0.5rem;
}

.mt-8 {
	margin-top: 2rem;
}

.block {
	display: block;
}

.inline {
	display: inline;
}

.flex {
	display: flex;
}

.inline-flex {
	display: inline-flex;
}

.grid {
	display: grid;
}

.inline-grid {
	display: inline-grid;
}

.hidden {
	display: none;
}

.aspect-\[16\/9\] {
	aspect-ratio: 16/9;
}

.aspect-square {
	aspect-ratio: 1 / 1;
}

.h-0 {
	height: 0px;
}

.h-10 {
	height: 2.5rem;
}

.h-12 {
	height: 3rem;
}

.h-16 {
	height: 4rem;
}

.h-20 {
	height: 5rem;
}

.h-3 {
	height: 0.75rem;
}

.h-3\.5 {
	height: 0.875rem;
}

.h-4 {
	height: 1rem;
}

.h-5 {
	height: 1.25rem;
}

.h-6 {
	height: 1.5rem;
}

.h-8 {
	height: 2rem;
}

.h-\[100dvh\] {
	height: 100dvh;
}

.h-full {
	height: 100%;
}

.max-h-full {
	max-height: 100%;
}

.w-0 {
	width: 0px;
}

.w-10 {
	width: 2.5rem;
}

.w-11\/12 {
	width: 91.666667%;
}

.w-12 {
	width: 3rem;
}

.w-16 {
	width: 4rem;
}

.w-8 {
	width: 2rem;
}

.w-full {
	width: 100%;
}

.min-w-0 {
	min-width: 0px;
}

.max-w-fit {
	max-width: fit-content;
}

.max-w-full {
	max-width: 100%;
}

.max-w-lg {
	max-width: 32rem;
}

.shrink {
	flex-shrink: 1;
}

.grow {
	flex-grow: 1;
}

.transform {
	transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

@keyframes pulse {
	50% {
		opacity: 0.5;
	}
}

.animate-pulse {
	animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
}

@keyframes spin {
	to {
		transform: rotate(360deg);
	}
}

.animate-spin {
	animation: spin 1s linear infinite;
}

.cursor-pointer {
	cursor: pointer;
}

.snap-x {
	scroll-snap-type: x var(--tw-scroll-snap-strictness);
}

.snap-mandatory {
	--tw-scroll-snap-strictness: mandatory;
}

.snap-start {
	scroll-snap-align: start;
}

.appearance-none {
	appearance: none;
}

.grid-flow-col {
	grid-auto-flow: column;
}

.grid-flow-col-dense {
	grid-auto-flow: column dense;
}

.grid-cols-1 {
	grid-template-columns: repeat(1, minmax(0, 1fr));
}

.grid-cols-3 {
	grid-template-columns: repeat(3, minmax(0, 1fr));
}

.grid-cols-\[1fr\2c auto\] {
	grid-template-columns: 1fr auto;
}

.grid-cols-\[1fr\2c min-content\] {
	grid-template-columns: 1fr min-content;
}

.grid-cols-\[1fr_auto\] {
	grid-template-columns: 1fr auto;
}

.grid-cols-\[75vw\2c 100vw\] {
	grid-template-columns: 75vw 100vw;
}

.grid-cols-\[auto\2c 1fr\2c auto\] {
	grid-template-columns: auto 1fr auto;
}

.grid-cols-\[auto\2c 1fr\] {
	grid-template-columns: auto 1fr;
}

.grid-cols-\[auto\2c minmax\(0\2c 1fr\)\] {
	grid-template-columns: auto minmax(0, 1fr);
}

.grid-cols-\[min-content\2c 1fr\] {
	grid-template-columns: min-content 1fr;
}

.grid-cols-\[min-content\2c min-content\] {
	grid-template-columns: min-content min-content;
}

.grid-cols-\[min-content\2c minmax\(0\2c 1fr\)\2c min-content\] {
	grid-template-columns: min-content minmax(0, 1fr) min-content;
}

.grid-rows-\[1fr\2c min-content\] {
	grid-template-rows: 1fr min-content;
}

.grid-rows-\[min-content\2c min-content\] {
	grid-template-rows: min-content min-content;
}

.flex-col {
	flex-direction: column;
}

.place-content-center {
	place-content: center;
}

.place-items-end {
	place-items: end;
}

.place-items-center {
	place-items: center;
}

.items-start {
	align-items: flex-start;
}

.items-center {
	align-items: center;
}

.justify-end {
	justify-content: flex-end;
}

.justify-center {
	justify-content: center;
}

.justify-between {
	justify-content: space-between;
}

.gap-1 {
	gap: 0.25rem;
}

.gap-2 {
	gap: 0.5rem;
}

.gap-3 {
	gap: 0.75rem;
}

.gap-4 {
	gap: 1rem;
}

.gap-6 {
	gap: 1.5rem;
}

.gap-x-1 {
	column-gap: 0.25rem;
}

.gap-x-2 {
	column-gap: 0.5rem;
}

.gap-x-3 {
	column-gap: 0.75rem;
}

.gap-y-1 {
	row-gap: 0.25rem;
}

.gap-y-2 {
	row-gap: 0.5rem;
}

.gap-y-3 {
	row-gap: 0.75rem;
}

.overflow-hidden {
	overflow: hidden;
}

.overflow-y-auto {
	overflow-y: auto;
}

.overflow-x-hidden {
	overflow-x: hidden;
}

.overflow-y-hidden {
	overflow-y: hidden;
}

.overflow-y-scroll {
	overflow-y: scroll;
}

.overflow-ellipsis {
	text-overflow: ellipsis;
}

.text-ellipsis {
	text-overflow: ellipsis;
}

.whitespace-nowrap {
	white-space: nowrap;
}

.whitespace-pre-wrap {
	white-space: pre-wrap;
}

.rounded {
	border-radius: 0.25rem;
}

.rounded-full {
	border-radius: 9999px;
}

.border {
	border-width: 1px;
}

.border-b {
	border-bottom-width: 1px;
}

.border-dashed {
	border-style: dashed;
}

.border-amber-500\/50 {
	border-color: rgb(245 158 11 / 0.5);
}

.border-lime-400\/40 {
	border-color: rgb(163 230 53 / 0.4);
}

.border-red-400 {
	--tw-border-opacity: 1;
	border-color: rgb(248 113 113 / var(--tw-border-opacity));
}

.border-red-400\/20 {
	border-color: rgb(248 113 113 / 0.2);
}

.border-red-400\/50 {
	border-color: rgb(248 113 113 / 0.5);
}

.border-transparent {
	border-color: transparent;
}

.border-white {
	--tw-border-opacity: 1;
	border-color: rgb(255 255 255 / var(--tw-border-opacity));
}

.border-white\/10 {
	border-color: rgb(255 255 255 / 0.1);
}
/* ... */

